feat: editing example config

--- a/src/main/resources/example.properties
+++ b/src/main/resources/example.properties
@@ -1,5 +1,5 @@
-spring.datasource.url=jdbc:mysql://localhost/database_name?createDatabaseIfNotExist=true&useSSL=false&serverTimezone=UTC
-spring.datasource.username=name_of_user
-spring.datasource.password=p@$$word
+spring.datasource.url=jdbc:mysql://localhost/database_name_here?createDatabaseIfNotExist=true&useSSL=false&serverTimezone=UTC
+spring.datasource.username=username_here
+spring.datasource.password=user_password_here
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
