--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "devDependencies": {
     "autoprefixer": "^10.2.4",
     "postcss": "^8.2.6",
+    "postcss-cli": "^8.3.1",
     "tailwindcss": "^2.0.3"
   }
 }
