--- a/package.json
+++ b/package.json
@@ -4,5 +4,8 @@
     "postcss": "^8.2.6",
     "postcss-cli": "^8.3.1",
     "tailwindcss": "^2.0.3"
-  }
+  },
+    "scripts" : {
+      "build" : "postcss src/main/resources/static/css/styles.css -o src/main/resources/static/css/tailwind.css"
+    }
 }
