feat: playing with google books API

--- a/.gitignore
+++ b/.gitignore
@@ -4,6 +4,8 @@ target/
 !**/src/main/**/target/
 !**/src/test/**/target/
 src/main/resources/application.properties
+keys.js
+src/main/resources/static/js/keys.js
 
 ### STS ###
 .apt_generated
